# SistemasOperacionais

./: CMakeLists.txt
Aula02/: Aula02.cbp  Aula02.depend  main.c
Aula04/: Aula04.cbp  main.c
Trabalho01/Beto_04_04_2023/: Trab_SO.c  group_policy_test_2.c  group_policy_test_true.c  main - pedro 08_04 - Prob Ponteiros.c  main - pedro 08_04.c  main.c  main_06_04.c
Trabalho01/trabalho01Pedro/: main.c  trabalho01Pedro.cbp  trabalho01Pedro.layout
Trabalho01/trabalho01Pedro/clion/: CMakeLists.txt  main.c  main2.c
